[b][color=orange]v3.12[/color], 12.11.2017[/b][list]
[*]Update/Added a lot of skins.
[*]Updated the EFL icons.
[*]Updated my Layout v2 + new texture.
[*]Add an ObjectiveTracker Hider.
[*]Added a chat button to increase the chat size.
[*]Add an own style for the close buttons.
[*]Prevent a rar nil error in FlightPoint.[/list]

[b][color=orange]v3.11[/color], 27.10.2017[/b][list]
[*]Fix the UnitFrame tags for v1.
[*]Updated my skinning function for stripes/gradient.[/list]

[b][color=orange]v3.10[/color], 27.10.2017[/b][list]
[*]Change the frame strata for the locPanel & Notifications.
[*]Add QuickJoinNotifications to my Notifications.
[*]Add SpeedyLoad.
[*]Massive Cleanup.
[*]Added some new skins & updated some skins.
[*]Add new tag: mUI-resting.
[*]Updated Expressway & Roboto-Black font.
[*]Small layout adjustments for v2.
[*]Use an own texture for the MailIcon.[/list]

[b][color=orange]v3.09[/color], 01.10.2017[/b][list]
[*]Fix a lua error after reload in the BigWigs skin.
[*]Add korean locale file.
[*]Adjust Orderhall Commandbar skin.
[*]Update ObjectiveTracker skin.
[*]Update filterPriority in install.
[*]Add a skin for the RaidFrame.
[*]Add a new tags "health-current-mUI" shows 2 diggets; "power:current-mUI" shows power if 0 instead of hiding it.
[*]Adjust the size for the Notifications frame.
[*]Remove OzCooldowns, since the original AddOn is working now.[/list]

[b][color=orange]v3.08[/color], 06.09.2017[/b][list]
[*]Add new filterPriority to install.
[*]Add a new texture.
[*]Add some spell to OzCooldowns.
[*]Fix spellRewards frame in Quest skin.
[*]Update SplashScreen Logo.[/list]

[b][color=orange]v3.07[/color], 31.08.2017[/b][list]
[*]Update install with new filterPriority.
[*]Add the possibility to change the duration text on the Nameplate auras.
[*]Fix errors with PlaySound API.
[*]Increase the size of the Orderhall Commandbar.[/list]

[b][color=orange]v3.06[/color], 29.08.2017[/b][list]
[*]Implement OzCooldowns - Credits Infinitron