@@ -63,7 +63,7 @@ local function ButtonStyleTable()
 						order = 1,
 						type = "description",
 						fontSize = "medium",
-						name = format("|cff9482c9Some code in this Addon was written by Infinitron and is used here under permission.|r"),
+						name = format("|cff9482c9Some code in this Addon was written by ChaosVoid and is used here under permission.|r"),
 					},
 				},
 			},
